tests/ui/structs-enums/issue-103869.stderr
error: expected one of `(`, `,`, `=`, `{`, or `}`, found `:`
  --> $DIR/issue-103869.rs:5:8
   |
LL | enum VecOrMap {
   |      -------- while parsing this enum
LL |
LL |     vec: Vec<usize>,
   |        ^ expected one of `(`, `,`, `=`, `{`, or `}`
   |
   = help: enum variants can be `Variant`, `Variant = <integer>`, `Variant(Type, ..., TypeN)` or `Variant { fields: Types }`
help: perhaps you meant to use `struct` here
   |
LL - enum VecOrMap {
LL + struct VecOrMap {
   |

error: aborting due to 1 previous error

